# clonehunter

./: .gitignore  README.md  main.py  pyproject.toml
benchmark/: .gitignore  baseline.json  run_benchmark.py
docs/: fix-mps-reasons-gate.md
examples/: clonehunter_diff.json  clonehunter_diff_report.html  clonehunter_report.html  clonehunter_report.json  clonehunter_report.sarif
fixtures/demo_monorepo/: invoice_form_helpers.ts  invoices_pipeline.py  order_form_helpers.ts  orders_pipeline.py
fixtures/tiny_repo/: a.py  classes.py  helpers.py
src/clonehunter/: __init__.py  __main__.py
src/clonehunter/_compat/: toml.py
src/clonehunter/cli/: main.py
src/clonehunter/core/: config.py  config_loader.py  errors.py  logging.py  pipeline.py  types.py
src/clonehunter/embedding/: cache.py  codebert_embedder.py  stub_embedder.py
src/clonehunter/engines/: __init__.py  semantic_engine.py  sonarqube_engine.py
src/clonehunter/index/: brute_index.py  faiss_index.py
src/clonehunter/io/: fingerprints.py  fs.py  git.py
src/clonehunter/model/: interfaces.py  registry.py
src/clonehunter/parsing/: python_ast.py  text_units.py
src/clonehunter/reporting/: compare.py  html_reporter.py  json_reporter.py  sarif_reporter.py  schema.py
src/clonehunter/similarity/: candidates.py  clustering.py  lexical.py  ranking.py  rollup.py  scoring.py
tests/: conftest.py  test_candidates.py  test_cli_entrypoints.py  test_cli_glob_merge.py  test_cli_integration.py  test_cli_smoke.py  test_clustering.py  test_codebert_embedder_integration.py  test_config_loader.py  test_core_utils.py  test_device_resolution.py  test_diff_command_unit.py  test_diff_e2e.py  test_embedding_cache.py  test_error_paths.py  test_expansion.py  test_faiss_index_mock.py  test_git_ops.py  test_io_fs.py  test_parsing.py  test_pipeline_smoke.py  test_reporters_html_sarif.py  test_reporting_json.py  test_rollup.py  test_scan_config_root.py  test_snippets.py  test_sonarqube_engine.py  test_threshold_edges.py
typings/: pytest.pyi  tomllib.pyi
(+6 files in other folders)
